--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "lint:fix": "eslint --fix src --ext ts,tsx",
-    "test": "jest"
+    "test": "jest",
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli"
   },
   "devDependencies": {
     "@types/jest": "^26.0.21",
@@ -16,7 +18,10 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "express": "^4.17.1",
     "pg": "^8.5.1",
+    "ts-node-dev": "^1.1.8",
     "typeorm": "^0.2.31"
   }
 }
