--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "ts-node-dev": "^1.1.8",
+    "tsyringe": "^4.6.0",
     "typeorm": "^0.2.31"
   }
 }
