--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.5.1",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
