--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 
 services:
-  database:
+  db_desafio:
     image: postgres
-    container_name: database
+    container_name: db_desafio
     restart: always
     ports: 
       - 5432:5432
@@ -13,21 +13,6 @@ services:
       - POSTGRES_DB=queries_challenge
     volumes:
       - pgdata:/data/postgres
-
-
-  app:
-    build: .
-    container_name: rentx
-    restart: always
-    ports: 
-      - 3333:3333
-      - 9229:9229
-    volumes: 
-      - .:/usr/app
-    links: 
-      - database
-    depends_on:
-      - database
 
 
 
